--- a/pom.xml
+++ b/pom.xml
@@ -14,27 +14,18 @@
 
     <properties>
         <revision>1.0.0</revision>
+        <java.version>1.8</java.version>
         <flink.version>1.15.2</flink.version>
         <flink.major.version>1.15</flink.major.version>
-        <flink.python.id>flink-python</flink.python.id>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <maven-javadoc-plugin.version>3.3.0</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.scm.id>github</project.scm.id>
-        <thrift-service.version>1.0.1</thrift-service.version>
         <checkstyle.version>8.14</checkstyle.version>
         <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
-        <spotless.version>2.4.2</spotless.version>
         <httpcomponents.version>4.5.13</httpcomponents.version>
-        <commons-codec.version>1.15</commons-codec.version>
-        <fasterxml.version>2.13.3</fasterxml.version>
-        <guava.version>31.1-jre</guava.version>
-        <slf4j.version>1.7.25</slf4j.version>
-        <mockito.version>4.2.0</mockito.version>
-        <testcontainers.version>1.17.6</testcontainers.version>
-        <junit.version>4.12</junit.version>
-        <hamcrest.version>1.3</hamcrest.version>
     </properties>
 
     <dependencies>
